--- a/site.css
+++ b/site.css
@@ -6,20 +6,20 @@ h1 { font-size:32px; line-height:36px; }
 body { color:#404040; }
 
 a       { color:#279acb; text-decoration:underline; }
-a:hover { text-decoration:inherit; }
+a:hover { text-decoration:underline; }
 
 .dark a, 
 .dark a:hover { color:#fff; text-decoration:none; }
 
 h1 a,
-h2 a,
+h2 a { text-decoration:none;}
 h3 a,
 h4 a,
 h5 a,
 h6 a { color:#404040; }
 
 h1 a:hover,
-h2 a:hover,
+h2 a:hover { text-decoration:none;}
 h3 a:hover,
 h4 a:hover,
 h5 a:hover,
