--- a/site.css
+++ b/site.css
@@ -12,7 +12,7 @@ a:hover { text-decoration:underline; }
 .dark a:hover { color:#fff; text-decoration:none; }
 
 h1 a,
-h2 a { text-decoration:none;}
+h2 a { color:#424242; text-decoration:none;}
 h3 a,
 h4 a,
 h5 a,
@@ -23,7 +23,7 @@ h2 a:hover { text-decoration:none;}
 h3 a:hover,
 h4 a:hover,
 h5 a:hover,
-h6 a:hover { text-decoration:none;}
+h6 a:hover { color:#424242; text-decoration:none;}
 
 .button {
   background:#2babe2;
